tests/src/frontend/visibility/invalid/mismatched_constructor_2.sk
base class Foo(x: Int)
class Bar private (y: Int) extends Foo
